# Masschain3DOF

./: .gitignore  LICENSE  README.md  pyproject.toml
src/masschain3dof/: __init__.py  __main__.py  app.py
tests/: test_modal_core.py
