[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "masschain3dof"
version = "0.1.0"
description = "Educational 3-DOF mass-spring modal and damped time-domain simulation GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Zazu Nanami" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
masschain3dof = "masschain3dof.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
